syntax = "proto3";

package NCloud.NProto;

option go_package = "github.com/ydb-platform/nbs/cloud/storage/core/protos";

////////////////////////////////////////////////////////////////////////////////
// YDB Config Dispatcher allow/deny lists

message TConfigNames
{
    repeated string Names = 1;
}

message TConfigDispatcherSettings
{
    message TLabel {
        string Key = 1;
        string Value = 2;
    }

    oneof AllowDenySettings {
        TConfigNames AllowList = 1;
        TConfigNames DenyList = 2;
    };

    repeated TLabel AdditionalNodeLabels = 3;
};
